<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.civicke.android.MainActivity">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/view_your_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/update_your_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_governance"
        android:orderInCategory="100"
        android:title="@string/update_your_county"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="100"
        android:title="@string/action_sign_out"
        app:showAsAction="never" />



</menu>
