<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/container"
    android:layout_height="match_parent"
    tools:context=".CreateSurvey">

    <androidx.appcompat.widget.Toolbar
        app:title="Create Survey Post"
        app:titleTextColor="@color/toolbarTitle"
        android:background="@color/toolbarBackground"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.appcompat.widget.Toolbar>

    <androidx.core.widget.NestedScrollView
        android:background="@color/white"
        android:layout_below="@id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:padding="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:textAlignment="textStart"
                android:drawableTint="@color/colorWhite"
                android:drawableEnd="@drawable/outline_event_24"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:fontFamily="@font/open_sans_semibold"
                android:background="@drawable/primary_background_button"
                android:textColor="@color/colorWhite"
                android:text="@string/select_due_date"
                android:id="@+id/dateButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_60"/>

            <com.google.android.material.textfield.TextInputEditText
                android:drawableStart="@drawable/outline_article_24"
                android:drawablePadding="5dp"
                android:textCursorDrawable="@drawable/cursor_drawable"
                android:cursorVisible="true"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:drawableTint="@color/colorPrimary"
                android:imeOptions="actionNext"
                android:inputType="textShortMessage"
                android:fontFamily="@font/open_sans_semibold"
                android:id="@+id/titleTextInputEditText"
                android:hint="@string/enter_survey_title"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_chat_container"
                android:minHeight="@dimen/dimen_60"
                android:paddingEnd="@dimen/dimen_10"
                android:paddingStart="@dimen/dimen_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputEditText
                android:drawableStart="@drawable/outline_article_24"
                android:drawablePadding="@dimen/padding_5"
                android:drawableTint="@color/colorPrimary"
                android:textSize="18sp"
                android:textCursorDrawable="@drawable/cursor_drawable"
                android:cursorVisible="true"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete|textImeMultiLine|textLongMessage|textAutoCorrect|textMultiLine"
                android:fontFamily="@font/open_sans_regular"
                android:id="@+id/summaryInputEditText"
                android:hint="@string/enter_survey_summary"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_chat_container"
                android:minHeight="@dimen/dimen_60"
                android:paddingEnd="@dimen/dimen_10"
                android:paddingStart="@dimen/dimen_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputEditText
                android:drawableStart="@drawable/outline_article_24"
                android:drawablePadding="@dimen/padding_5"
                android:drawableTint="@color/colorPrimary"
                android:textSize="18sp"
                android:textCursorDrawable="@drawable/cursor_drawable"
                android:cursorVisible="true"
                android:imeOptions="actionNext"
                android:inputType="textWebEditText"
                android:fontFamily="@font/open_sans_regular"
                android:id="@+id/linkInputEditText"
                android:hint="@string/enter_survey_link"
                android:layout_marginTop="24dp"
                android:background="@drawable/rounded_chat_container"
                android:minHeight="@dimen/dimen_60"
                android:paddingEnd="@dimen/dimen_10"
                android:paddingStart="@dimen/dimen_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:fontFamily="@font/open_sans_bold"
                android:layout_marginTop="16dp"
                android:text="@string/select_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Spinner
                android:layout_marginTop="8dp"
                android:id="@+id/topicSpinner"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/rounded_chat_container"
                android:entries="@array/topics" />


            <Button
                android:textAllCaps="false"
                android:layout_marginTop="@dimen/dimen_24"
                android:textSize="16sp"
                android:fontFamily="@font/open_sans_semibold"
                android:background="@drawable/primary_background_button"
                android:textColor="@color/colorWhite"
                android:text="@string/next"
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_60"/>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.wang.avi.AVLoadingIndicatorView
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/progressBar"
        android:layout_gravity="bottom|center_horizontal"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_30"
        app:indicatorColor="@color/colorPrimary"
        app:indicatorName="BallPulseIndicator" />
</RelativeLayout>