<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_alignParentTop="true"
        android:padding="@dimen/dimen_12"
        android:background="@color/toolbarBackground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50">

        <TextView
            android:layout_centerInParent="true"
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:background="@color/toolbarBackground"
            android:fontFamily="@font/open_sans_bold"
            android:textColor="@color/toolbarTitle"
            android:textSize="18sp"
            android:gravity="center" />

        <ImageView
            android:contentDescription="@string/select"
            android:visibility="gone"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/ic_add_blue_24dp"
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/colorWhite" />

    </RelativeLayout>



    <androidx.recyclerview.widget.RecyclerView
        tools:listitem="@layout/user_item"
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearLayout"
        android:layout_below="@+id/relativeLayout"
        android:layout_gravity="center_horizontal" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/cancel"
            android:background="@color/toolbarTitle"
            android:textColor="@color/toolbarBackground"
            android:id="@+id/yes" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#fff" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/done"
            android:background="@color/toolbarTitle"
            android:textColor="@color/toolbarBackground"
            android:id="@+id/no" />

    </LinearLayout>


</RelativeLayout>