<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/container"
    android:layout_height="match_parent"
    tools:context=".CreateRadio">

  <androidx.appcompat.widget.Toolbar
      app:title="Add List Survey"
      app:titleTextColor="@color/toolbarTitle"
      android:background="@color/toolbarBackground"
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

  </androidx.appcompat.widget.Toolbar>

  <androidx.core.widget.NestedScrollView
      android:background="@color/white"
      android:layout_below="@id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout
        android:padding="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

      <com.google.android.material.textfield.TextInputEditText
          android:drawableStart="@drawable/outline_article_24"
          android:drawablePadding="5dp"
          android:textSize="18sp"
          android:textCursorDrawable="@drawable/cursor_drawable"
          android:cursorVisible="true"
          android:textColor="@color/black"
          android:drawableTint="@color/colorPrimary"
          android:imeOptions="actionNext"
          android:inputType="textPersonName"
          android:fontFamily="@font/open_sans_bold"
          android:id="@+id/titleTextInputEditText"
          android:hint="@string/add_survey_question"
          android:background="@drawable/rounded_chat_container"
          android:minHeight="@dimen/dimen_60"
          android:paddingEnd="@dimen/dimen_10"
          android:paddingStart="@dimen/dimen_10"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

      <com.google.android.material.textfield.TextInputEditText
          android:layout_marginTop="@dimen/dimen_20"
          android:drawableStart="@drawable/outline_article_24"
          android:drawablePadding="5dp"
          android:textSize="18sp"
          android:textCursorDrawable="@drawable/cursor_drawable"
          android:cursorVisible="true"
          android:textColor="@color/black"
          android:drawableTint="@color/colorPrimary"
          android:inputType="textShortMessage"
          android:fontFamily="@font/open_sans_bold"
          android:id="@+id/summaryTextView"
          android:hint="@string/add_survey_list_options"
          android:background="@drawable/rounded_chat_container"
          android:minHeight="@dimen/dimen_60"
          android:imeOptions="actionDone"
          android:paddingEnd="@dimen/dimen_10"
          android:paddingStart="@dimen/dimen_10"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>





      <androidx.recyclerview.widget.RecyclerView
          tools:itemCount="1"
          android:layout_marginTop="@dimen/dimen_24"
          android:orientation="vertical"
          android:scrollbars="none"
          tools:listitem="@layout/topics_item"
          android:id="@+id/recyclerView"
          android:background="@color/colorWhite"
          android:layout_width="match_parent"
          android:layout_height="match_parent" />


      <Button
          android:textAllCaps="false"
          android:layout_marginTop="@dimen/dimen_24"
          android:textSize="16sp"
          android:fontFamily="@font/open_sans_semibold"
          android:background="@drawable/primary_background_button"
          android:textColor="@color/colorWhite"
          android:text="@string/publish"
          android:id="@+id/button"
          android:layout_width="match_parent"
          android:layout_height="@dimen/dimen_60"/>


    </LinearLayout>

  </androidx.core.widget.NestedScrollView>

  <com.wang.avi.AVLoadingIndicatorView
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:id="@+id/progressBar"
      android:layout_gravity="bottom|center_horizontal"
      android:visibility="gone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="@dimen/dimen_30"
      app:indicatorColor="@color/colorPrimary"
      app:indicatorName="BallPulseIndicator" />
</RelativeLayout>